<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/ic_launch"
    tools:context=".SignInActivity">


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/round_background"
        android:text="@string/register_txt"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="180dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Edit_mail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/round_background"
                android:ems="15"
                android:hint="@string/mail_hint"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Edit_paswd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:background="@drawable/round_background"
                android:ems="15"
                android:hint="@string/hint_paswd"
                android:inputType="textPassword"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</RelativeLayout>